snippets/Nemerle.Statechart/Tests/testsuite/negative/event_and_action_same_name.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing;
  
  name "event and action same name";
  
  state A
  {
    a => B;
  }
  
  state B
  {
    entry / a; // E: Event and action have one name "a\(\)"
  }
  
  #>)]
  public class example
  {
  }

 
